<resources>
    <string name="app_name">sunnie</string>
    <string name="tvSignIn">sign in</string>
    <string name="tvSignUp">sign up</string>
    <string name="tvWelcome">welcome\nback</string>
    <string name="tvCreateAcc">create\naccount</string>
    <string name="tvForgotPassword">forgot password?</string>
    <string name="tvEmail">email</string>
    <string name="tvPassword">password</string>
    <string name="tvOr">or</string>
    <string name="tvSignInGoogle">sign in with Google</string>
    <string name="tvSignUpGoogle">sign up with Google</string>
    <string name="tvNotRegistered">not yet registered? sign up</string>
    <string name="tvAlreadyUser">already a user? sign in</string>
    <string name="imageview">imageview</string>
    <string name="iv">iv</string>
    <string name="tvLocation">locations</string>
    <string name="tvMyLocations">my locations</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="manage_locations">manage locations</string>
    <string name="current_location">current location</string>
    <string name="istanbul">Istanbul</string>
    <string name="_13_u00b0">13°</string>
    <string name="locations">locations</string>
    <string name="tvPopUp">Please allow location to continue.\nManage your location permissions.</string>
    <string name="there_are_no_saved_locations">There are no saved locations</string>
    <string name="add_new_location">add new location</string>

</resources>